--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <header class="header">
   <img class="headerlogo" src="images/logo.png" alt="TradeStuff" width="250">
   <div class="headertext">
-    <h2>View Profile</h2>
+    <h2><a href="viewprofile.html">View Profile</a></h2>
     <h2><a href="auction.html">Auction</a></h2>
-    <h2>Customer List</h2>
+    <h2><a href="customers.html">Customer List</a></h2>
   </div>
   <a href="index.html"><img class="accounticon" src="images/accounticon.png" alt="My Account" width="50"></a>
 </header>
