--- a/auction.html
+++ b/auction.html
@@ -2,23 +2,115 @@
 <html>
 
 <head>
-  <title>TradeStuff - My Profile</title>
+  <title>Royal Gala Apples Auction</title>
   <link rel="stylesheet" type="text/css" media="screen" href="dist/style.css">
   <script type="text/javascript" src="auction.js"></script>
 </head>
 <header class="header">
   <img class="headerlogo" src="images/logo.png" alt="TradeStuff" width="250">
   <div class="headertext">
-    <h2>View Profile</h2>
+    <h2><a href="viewprofile.html">View Profile</a></h2>
     <h2><a href="auction.html">Auction</a></h2>
-    <h2>Customer List</h2>
+    <h2><a href="customers.html">Customer List</a></h2>
   </div>
   <a href="index.html"><img class="accounticon" src="images/accounticon.png" alt="My Account" width="50"></a>
 
 </header>
 
 <body class="body">
-
+    <div class="auctioncontainer">
+        <div class="auctionitemcolumn">
+            </br>
+            <img class="auctionitemimg" src="images/apple.png" height="500px" maxwidth="600">
+            <h2>Details</h2>
+            <p>Developed in New Zealand, Royal Gala Apples are New Zealand’s largest volume variety.  It is bold red and vertically striped in appearance, with thin skin and crisp white flesh.  With fine texture, a mild, sweet and aromatic flavour – it is one of the world’s premium apple varieties.</p>
+            <h2>Specifications</h2>
+            <p>20kg Pack</p>
+            <div class="auctioncommentscolumn">
+                <h2>Comments</h2>
+                <ul class="auctioncommentslist">
+                  <li>
+                    <div class="auctioncommentsitem" id="commentsitem1">
+                      <p><b>Michelle O.</b> 4th May</p>
+                      <p class="auctioncomment">What is the averageweight of a single apple?</p>
+                      <p class="indented"><b>Lee Ji-eun</b> - dunno</p>
+                      <input type="text" id="commentinput1" placeholder="Write a comment...">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="auctioncommentsitem" id="commentsitem2">
+                      <p><b>Rick J.</b> 7th May</p>
+                      <p class="auctioncomment">How long since they have been picked?</p>
+                      <input type="text" id="commentinput2" placeholder="Write a comment...">
+                    </div>
+                  </li>
+                </ul>
+              </div>
+        </div>
+        <div class="auctionprofilecolumn">
+            <h1>Royal Gala Apples</h1>
+            <p>Closes: Fri 25th June, 8:30pm</p>
+            <div class="auctioncurrentbid">
+                <p>Current Highest Bid</p>
+                <h2>30 x $50</h2>
+                <p>from Jimmy L.</p>
+                <div class = auctioncurrentbidinputs>
+                    <input type="number" id="inputamount" placeholder="0">
+                    <p>X</p>
+                    <input type="number" id="inputprice" placeholder="$0">   
+                </div>
+                <button class="auctionbidbutton" id="auctionbidbutton">Place Bid</button>
+            </div>
+            <div class="auctionbidslist" >
+                <h2>Current Bids</h2>
+                </br>
+                <ul id="auctionbidlist">
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">30 x $50</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:51</p>                  
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">30 x $46</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:50</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">20 x $46</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:45</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">19 x $45</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:44</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">18 x $45</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:43</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">17 x $45</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:42</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="auctionbiddetails">
+                            <p style="float: left;">17 x $40</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:30</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="auctionsellerprofile">
+                <img class="auctionsellerprofileimg" src="images/profilepic5.png" height="100">
+                <div style="margin-left:20px;">
+                    <h2>Lee Ji-eun</h2>
+                    <p style="margin:0; text-align: left;">Apple Inc.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <footer class="footer">
   <p>Trademark 2023</p>
