--- a/viewprofile.html
+++ b/viewprofile.html
@@ -22,7 +22,74 @@
     <div class="viewprofileleft">
       <img class="viewprofileimg" src="images/profilepic5.png" width="200">
     </div>
-    <div class="viewprofileright"></div>
+    <div class="viewprofileright">
+      <div class="Description">
+        <h2>Lee Ji-eun</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+      <h2>Products</h2>
+
+      <div class="profileproducts">
+        <ul class="auctionlist">
+          <li>
+            <div class="auctionitem">
+              <img class="auctionlistimg" src="images/apple.png" alt="apple">
+              <div class="auctiondescription">
+                <h2>Royal Gala Apples</h2>
+                <p>Highest Bid: 5 x $50 from Jimmy</p>
+                <p>Closes: Fri 25th June, 8:30pm</p>
+              </div>
+  
+            </div>
+          </li>
+          <li>
+            <div class="auctionitem">
+              <img class="auctionlistimg" src="images/banana.png" alt="banana">
+              <div class="auctiondescription">
+                <h2>Bananas</h2>
+                <p>Highest Bid: 10 x $35 from Alfred</p>
+                <p>Closes: Sat 26th June, 8:30pm</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="auctionitem">
+              <img class="auctionlistimg" src="images/carrots.png" alt="carrot">
+              <div class="auctiondescription">
+                <h2>Carrots</h2>
+                <p>Highest Bid: 30 x $120 from Yo mama</p>
+                <p>Closes: Sat 26th June, 8:30pm</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="auctionitem">
+              <img class="auctionlistimg" src="images/potatos.png" alt="potato">
+              <div class="auctiondescription">
+                <h2>Agria Potatos</h2>
+                <p>Highest Bid: 10 x $85 from Alex</p>
+                <p>Closes: Sat 26th June, 8:30pm</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="auctionitem">
+              <img class="auctionlistimg" src="images/icecream.png" alt="icecream">
+              <div class="auctiondescription">
+                <h2>Vanila Ice Cream</h2>
+                <p>Highest Bid: 4 x $60 from Dog</p>
+                <p>Closes: Sat 26th June, 8:30pm</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 <footer class="footer">
