--- a/auction.html
+++ b/auction.html
@@ -105,7 +105,7 @@
             <div class="auctionsellerprofile">
                 <img class="auctionsellerprofileimg" src="images/profilepic5.png" height="100">
                 <div style="margin-left:20px;">
-                    <h2>Lee Ji-eun</h2>
+                    <h2>Mike Wazowski</h2>
                     <p style="margin:0; text-align: left;">Apple Inc.</p>
                 </div>
             </div>
