--- a/auction.html
+++ b/auction.html
@@ -50,6 +50,11 @@
         <div class="auctionprofilecolumn">
             <h1>Royal Gala Apples</h1>
             <p>Closes: Fri 25th June, 8:30pm</p>
+            <div class="auctionbidsdisplay">
+                <div class="auctionbidschart" id="auctionbidschart">
+                </div>
+            </div>
+            
             <div class="auctioncurrentbid">
                 <p>Current Highest Bid</p>
                 <h2>30 x $50</h2>
@@ -65,6 +70,7 @@
                 <h2>Current Bids</h2>
                 </br>
                 <ul id="auctionbidlist">
+                    <!---
                     <li>
                         <div class="auctionbiddetails">
                             <p style="float: left;">30 x $50</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:51</p>                  
@@ -100,6 +106,7 @@
                             <p style="float: left;">17 x $40</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:30</p>
                         </div>
                     </li>
+                    -->
                 </ul>
             </div>
             <div class="auctionsellerprofile">
