--- a/auction.html
+++ b/auction.html
@@ -57,8 +57,8 @@
             
             <div class="auctioncurrentbid">
                 <p>Current Highest Bid</p>
-                <h2>30 x $50</h2>
-                <p>from Jimmy L.</p>
+                <h2 id="auctioncurrentbidh2"></h2>
+                <p id="auctioncurrentbidp"></p>
                 <div class = auctioncurrentbidinputs>
                     <input type="number" id="inputamount" placeholder="0">
                     <p>X</p>
@@ -70,43 +70,6 @@
                 <h2>Current Bids</h2>
                 </br>
                 <ul id="auctionbidlist">
-                    <!---
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">30 x $50</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:51</p>                  
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">30 x $46</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:50</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">20 x $46</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:45</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">19 x $45</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:44</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">18 x $45</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:43</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">17 x $45</p><p style="margin: 0 auto;">John S.</p><p style="float: right;">Thu 11th May, 4:42</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="auctionbiddetails">
-                            <p style="float: left;">17 x $40</p><p style="margin: 0 auto;">Jimmy L.</p><p style="float: right;">Thu 11th May, 4:30</p>
-                        </div>
-                    </li>
-                    -->
                 </ul>
             </div>
             <div class="auctionsellerprofile">
